<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IoNutrizionista</string>
    <string name="title_activity_calcolo_valori_energetici">Valori Energetici</string>
    <string name="title_activity_calcolo_valori_energetici_v2">Valori Energetici</string>
    <string name="action_settings">Impostazioni</string>

    <!-- Main Activity -->
    <string name="text_view_quadrante_nordovest">Calcolo\nValori Energetici</string>
    <string name="text_view_quadrante_nordest">Cronologia\n(Coming soon)</string>
    <string name="text_view_quadrante_sudovest">Suggerimenti &amp; Raccomandazioni (Coming soon)</string>
    <string name="text_view_quadrante_sudest">Contatti\n(Coming soon)</string>
    <string name="text_view_crediti">Napples ®2015 Giuseppe Liccardo</string>
    <string name="text_view_versione">v0.1.0</string>

    <!-- Label Icone Lista Sezioni -->
    <string name="dati_paziente">Dati Paziente</string>
    <string name="misurazioni">Misurazioni</string>
    <string name="risultati">Risultati</string>

    <!-- Funzionalità 1 - Label -->
    <string name="text_view_dati_anagrafici">Dati Anagrafici</string>
    <string name="text_view_contatti">Contatti</string>
    <string name="text_view_misurazioni_pesoforma">Pesoforma</string>
    <string name="text_view_misurazioni_circonferenza">Circonferenza</string>
    <string name="text_view_misurazioni_pliche">Pliche</string>
    <string name="text_view_risultati_in_evidenza">In evidenza</string>
    <string name="text_view_risultati_completi">Risultati Completi</string>

    <!-- Funzionalità 1 - Dati Anagrafici -->
    <string name="text_view_nome">Nome: </string>
    <string name="text_view_cognome">Cognome: </string>
    <string name="hint_nome_paziente">Inserire nome</string>
    <string name="hint_cognome_paziente">Inserire cognome</string>

    <string name="text_view_sesso">Sesso: </string>
    <string name="radio_button_maschio">M</string>
    <string name="radio_button_femmina">F</string>

    <string name="text_view_data_di_nascita">Data nascita:</string>
    <string name="hint_data_di_nascita">gg/mm/aaaa</string>

    <string name="text_view_occupazione">Occupazione:</string>

    <!-- Funzionalità 1 - Contatti -->
    <string name="text_view_telefono_fisso">Telefono:</string>
    <string name="hint_telefono_fisso">Inserire telefono fisso</string>

    <string name="text_view_cellulare">Cellulare:</string>
    <string name="hint_cellulare">Inserire cellulare</string>

    <string name="text_view_email">Email:</string>
    <string name="hint_email">Inserire email</string>

    <!-- Funzionalità 1 - Misurazioni -->
    <string name="text_view_pesoforma">Pesoforma</string>
    <string name="text_view_pliche">Pliche</string>
    <string name="text_view_circonferenza">Circonferenza</string>

    <string name="text_view_altezza">Altezza: </string>
    <string name="text_view_peso">Peso: </string>
    <string name="text_view_pliche_girovita">Girovita: </string>
    <string name="text_view_pliche_schiena">Schiena: </string>
    <string name="text_view_pliche_braccio">Braccio: </string>
    <string name="text_view_circonferenza_girovita">Girovita: </string>
    <string name="text_view_circonferenza_fianchi">Fianchi: </string>
    <string name="text_view_circonferenza_collo">Collo: </string>
    <string name="text_view_circonferenza_coscia">Coscia: </string>
    <string name="text_view_circonferenza_polso">Polso: </string>
    <string name="text_view_circonferenza_braccio">Braccio: </string>

    <!-- Funzionalità 1 - Risultati -->
    <string name="text_view_stato_salute">Stato Salute</string>
    <string name="text_view_condizione_fisica">Condizione Fisica</string>
    <string name="text_view_costituzione">Costituzione</string>
    <string name="text_view_razione_calorica">Razione Calorica</string>

    <string name="text_view_costituzione_valore">Valore Costituzione</string>

    <string name="text_view_peso_attuale">Peso Attuale</string>
    <string name="text_view_massa_magra">Massa Magra</string>
    <string name="text_view_massa_grassa">Massa Grassa</string>
    <string name="text_view_peso_ideale">Peso Ideale</string>
    <string name="text_view_peso_obiettivo">Peso Obiettivo</string>

    <string name="text_view_bmi">Indice Massa Corporea</string>
    <string name="text_view_metabolismo_basale">Metabolismo Basale</string>
    <string name="text_view_fabbisogno_energetico">Fabbisogno Energetico</string>
    <string name="text_view_razione_calorica_leggera">Razione Calorica Leggera</string>
    <string name="text_view_razione_calorica_moderata">Razione Calorica Moderata</string>
    <string name="text_view_razione_calorica_pesante">Razione Calorica Pesante</string>

    <string name="text_view_whr_girovita_fianchi">WHR (girovita/fianchi)</string>
    <string name="text_view_whr_rischio_salute">Rischio salute WHR</string>
    <string name="text_view_wht_girovita_coscia">WHT (girovita/coscia)</string>
    <string name="text_view_wht_rischio_salute">Rischio salute WHT</string>

    <!-- Funzionalità 1 - Button -->
    <string name="button_altro1">Altro1</string>
    <string name="button_altro2">Altro2</string>
    <string name="button_calcola">Calcola</string>

    <!-- Funzionalità 1 - Barra Colorata -->
    <string name="barra_viola_dark">16-</string>
    <string name="barra_blu">16~19</string>
    <string name="barra_verde">19~25</string>
    <string name="barra_giallo">25~30</string>
    <string name="barra_arancione">30~35</string>
    <string name="barra_rosso">35~40</string>
    <string name="barra_rosso_dark">40+</string>

    <!-- Unità di misura -->
    <string name="text_view_cm">cm</string>
    <string name="text_view_mm">mm</string>
    <string name="text_view_kg">kg</string>
    <string name="text_view_kcal">kcal</string>
    <string name="text_view_kg_m2"><sup>kg</sup>/<sub>m<sup><small>2</small></sup></sub></string>
    <string name="text_view_cm_cm"><sup>cm</sup>/<sub>cm</sub></string>
    <string name="text_view_percentuale">%</string>

</resources>
