<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:orientation="horizontal" >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/button_altro1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/button_altro1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/button_altro2"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/button_altro2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/button_calcola"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/button_calcola" />

</LinearLayout>