<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp" >

        <TextView
            android:id="@+id/text_view_dati_anagrafici"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="4dp"
            android:gravity="center"
            android:background="@color/light_blue500"
            android:text="@string/text_view_dati_anagrafici"
            android:textSize="@dimen/font_size_grande"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/table_layout_dati_anagrafici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/valori_energetici_padding_all_table_layout"
            android:background="@color/light_blue50"
            android:layout_below="@+id/text_view_dati_anagrafici" >

            <!-- RIGA 1: Nome | EditText -->
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_view_nome"
                    android:textSize="@dimen/font_size_medio"
                    android:textColor="@color/nero" />
                <EditText
                    android:id="@+id/edit_text_nome"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6.5"
                    android:paddingLeft="@dimen/valori_energetici_padding_laterale_edit_text"
                    android:paddingRight="@dimen/valori_energetici_padding_laterale_edit_text"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_nome_paziente"
                    android:textSize="@dimen/font_size_medio"
                    android:ems="10"
                    android:textStyle="italic" />
            </TableRow>

            <!-- RIGA 2: Cognome | EditText  -->
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_view_cognome"
                    android:textSize="@dimen/font_size_medio"
                    android:textColor="#ff000000" />
                <EditText
                    android:id="@+id/edit_text_cognome"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6.5"
                    android:paddingLeft="@dimen/valori_energetici_padding_laterale_edit_text"
                    android:paddingRight="@dimen/valori_energetici_padding_laterale_edit_text"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_cognome_paziente"
                    android:textSize="@dimen/font_size_medio"
                    android:ems="10"
                    android:textStyle="italic" />
            </TableRow>

            <!-- RIGA 3: Sesso | Combobox | Età | Combobox -->
            <TableRow>
                <TextView
                    android:text="@string/text_view_sesso"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/font_size_medio"
                    android:textColor="#ff000000" />
                <RadioGroup
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" >
                    <RadioButton
                        android:id="@+id/radio_button_maschio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_button_selector"
                        android:paddingLeft="8dp"
                        android:checked="true"
                        android:text="@string/radio_button_maschio"
                        android:textAlignment="textEnd"
                        android:gravity="center_vertical|end" />
                    <RadioButton
                        android:id="@+id/radio_button_femmina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                        android:button="@drawable/radio_button_selector"
                        android:paddingLeft="8dp"
                        android:text="@string/radio_button_femmina"
                        android:textAlignment="textEnd"
                        android:gravity="center_vertical|end" />
                </RadioGroup>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:inputType="none"
                    android:textSize="@dimen/font_size_medio"
                    android:visibility="invisible"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/text_view_data_di_nascita"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/font_size_medio"
                    android:textColor="#ff000000" />
                <EditText
                    android:id="@+id/edit_text_eta"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="6.5"
                    android:paddingLeft="@dimen/valori_energetici_padding_laterale_edit_text"
                    android:paddingRight="@dimen/valori_energetici_padding_laterale_edit_text"
                    android:inputType="date"
                    android:hint="@string/hint_data_di_nascita"
                    android:textSize="@dimen/font_size_medio"
                    android:textStyle="italic" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>
